# YouTube-Artem-Shumeiko-FastAPI-course

./: .gitignore  pyproject.toml
№10. Как запустить FastAPI в Docker контейнере/: Dockerfile  main.py
№12. Структура FastAPI приложения｜Как организовать FastAPI проект/: books.db
№12. Структура FastAPI приложения｜Как организовать FastAPI проект/src/: database.py  main.py
№12. Структура FastAPI приложения｜Как организовать FastAPI проект/src/api/: __init__.py  books.py  dependencies.py
№12. Структура FastAPI приложения｜Как организовать FastAPI проект/src/models/: books.py
№12. Структура FastAPI приложения｜Как организовать FastAPI проект/src/schemas/: books.py
№13. CORS. Как связать фронтенд и бэкенд/: index.html  main.py
№14. Что такое Depends в FastAPI｜Инъекция зависимостей/: books.db  main.py
№15. Что такое Middleware｜Простым языком/: main.py
№2. Как установить + 3 способа запуска проекта/: main.py
№4 Pydantic — Быстрая Валидация Данных в Python/: main.py
№5 Базы данных в FastAPI — Как подключиться и делать запросы/: main.py
№6. Авторизация на FastAPI — Регистрация и Аутентификация пользователей/: main.py
№7. Фоновые задачи в FastAPI — Асинхронность и Многопоточность/: main.py
№8. Работа с файлами в FastAPI — Загрузка и умное скачивание/: main.py
№9. Как тестировать API на Python｜Pytest + FastAPI/: main.py
№9. Как тестировать API на Python｜Pytest + FastAPI/tests/: test_api.py
